--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
 
 }
 .post{
-    background: rgb(112, 106, 106) ;
+    background: rgba(124, 69, 103, 0.651) ;
     color: white;
     padding: 10px;
     border-radius: 10px;
